output/unpackaged/unpackaged/objects/Event_Publication__c.object
<CustomObject>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <label>Correlation Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Detail__c</fullName>
        <label>Error Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Event Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Version__c</fullName>
        <label>Event Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idempotency_Key__c</fullName>
        <label>Idempotency Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_On__c</fullName>
        <label>Published On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Replay_Id__c</fullName>
        <label>Replay Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Publication</label>
    <nameField>
        <displayFormat>EP-{000000}</displayFormat>
        <label>Event Publication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Publications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>